F*IX deprecated intern transient skjæringstidspunkt vurdering (bør ikke være del av enitet).  Lagt til metoder for å hente ut alle inntektsposter, ytelser for migrering